changes by bjoern
git-svn-id: http://svn.projects.ez.no/xrowmultibinary@24 cf65925a-9c52-4b88-8269-47fa7225a02a

--- a/trunk/extension/xrowmultibinary/design/standard/stylesheets/plupload.queue.css
+++ b/trunk/extension/xrowmultibinary/design/standard/stylesheets/plupload.queue.css
@@ -101,11 +101,12 @@
 .plupload_file_name {float: left; overflow: hidden}
 .plupload_file_status {color: #777;}
 .plupload_file_status span {color: #42454A;}
-.plupload_file_size, .plupload_file_status, .plupload_progress {
+.plupload_file_size, .plupload_file_percent, .plupload_file_status, .plupload_progress {
 	float: right;
 	width: 80px;
 }
-.plupload_file_size, 
+.plupload_file_size,
+.plupload_file_percent,  
 .plupload_file_status {
 	text-align: right;
 }
